# abd_verified

./: .gitignore  README.md  _CoqProject  dune-project
lib/: Lib.v  dune  libcoq.ml  libcoq.mli
test/: dune
theories/: Example.v  Vecclock.v
