(lang dune 3.17)
(using coq 0.6)
(name abd)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "hyperb0rean")

(maintainers "hyperb0rean")

(license LICENSE)

(package
 (name abd)
 (synopsis "Atomic replicated register verified")
 (description "See README.md")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

